<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Weather</string>
    
    <string name="city_manager">City manager</string>
    <string name="delete">Delete</string>
    <string name="delete_city">Delete %1s?</string>
    <string name="add_city">Add %1s?</string>
    <string name="update_location_city">Update GPS city to %1s?</string>
    <string name="toast_query_city_fail">Query city failed.</string>
    
    <string name="add_city_title">Add city</string>
    <string name="city_name_hint">City name</string>
    <string name="city_not_found">Can not find city.</string>
    <string name="weather_not_found">Can not find weather.</string>
    <string name="city_max_toast">Maximum %1s cities.</string>
    <string name="progress_refresh">Updating&#8230;</string>
    
    <string name="clock_24_hours_format" translatable="false">kk&#58;mm</string>
    <string name="main_widget_12_hours_format" translatable="false">h&#58;mm</string>
    <string name="weather_data_default">Unknown</string>
    
    <string name="refresh_time">Refresh time: %1s</string>
    <string name="toast_wifi_only_mode">Wifi only mode.</string>
    <string name="toast_net_inavailable">Net is not available.</string>
    
    <string name="settings">Settings</string>
    
    <string name="menu_auto_refresh">Automatic updates</string>
    <string name="menu_auto_refresh_6h">Every 6 hours</string>
    <string name="menu_auto_refresh_12h">Every 12 hours</string>
    <string name="menu_auto_refresh_24h">Every day</string>
    <string name="menu_wifi_only">WIFI only</string>
    <string name="menu_temperature_type">Temperature unit</string>
    <string name="menu_notification">Notification</string>
    <string name="menu_temperature_c">Celsius</string>
    <string name="menu_temperature_f">Fahrenheit</string>
    <string name="temperature_c" translatable="false">"°C"</string>
    <string name="temperature_f" translatable="false">"°F"</string>
    
    <string name="weather_cloudy">Cloudy</string>
    <string name="weather_breezy">Breezy</string>
    <string name="weather_windy">Windy</string>
    <string name="weather_sunny">Sunny</string>
    <string name="weather_clear">Clear</string>
    <string name="weather_showers">Showers</string>
    <string name="weather_snow_showers">Snow showers</string>
    <string name="weather_thunderstorms">Thunderstorms</string>
    <string name="weather_rain">Rain</string>
    <string name="weather_rain_and_snow">Rain and snow</string>
	
	<!-- add shiyang start -->
	<string name="header_reset">Pull down to refresh</string>
    <string name="header_pull">Pull down to refresh</string>
    <string name="header_pull_over">The release flushes immediately</string>
    <string name="header_refreshing">Refreshing...</string>
    <string name="header_completed">Refresh succeeded</string>
    <string name="header_fail">Refresh failed</string>
	<!-- add shiyang end -->
</resources>